<resources>
    <string name="app_name">Demo Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="survey">Survey</string>
    <string name="view_weather">View Weather</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>
    <string name="movie_db">Movie DB</string>
    <string name="firebase_login">Firebase Login</string>
    <string name="others">Others</string>
    <string name="weather">Weather</string>
    <string name="weather_module_idea_from_hellohasan">Weather Module Idea from hellohasan.com</string>
</resources>
