<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="saidur.demo.app.view.landing.view.LandingViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/nature_5"
                app:layout_constraintEnd_toEndOf="@+id/firstGridLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/firstGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/homeImage"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/secondGridLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeImage">

                <LinearLayout
                    android:id="@+id/firstLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/speech"
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@drawable/nature_1" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/survey"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/secondLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/history"
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@drawable/nature_2" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/movie_db"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstGridLayout"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstGridLayout">

                <LinearLayout
                    android:id="@+id/thirdLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/speechSeven"
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@drawable/nature_3" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/firebase_login"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/fourthLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/others"
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@drawable/nature_4" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/others"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>